# ocr_tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: app.json
src-tauri/src/: main.rs
src/components/: HelloWorld.vue
